--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <!-- The charset definition must be the first child of the `<head>` tag. -->
   <meta charset="utf-8">
   <title> Signalot</title>
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
   <!-- The AMP runtime must be loaded as the second child of the `<head>` tag.-->
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <!--
