--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: stub
   <div class="o2">
   <amp-video loop autoplay noaudio layout="responsive"
     width="1920" height="1080" poster="/assets/v/bgv2.jpg">
-    <source src="/assets/v/bgv2.webm" type="video/webm" />
+    <!-- <source src="/assets/v/bgv2.webm" type="video/webm" /> -->
     <source src="/assets/v/bgv2.mp4" type="video/mp4" />
     <div fallback>
       <p>This browser does not support the video element.</p>
